openshift/certs-deployment.yml
# MIT License
#
# Copyright (c) 2018-2019 Red Hat, Inc.

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

---
kind: DeploymentConfig
apiVersion: v1
metadata:
  labels:
    service: get-them-certs
  name: get-them-certs
spec:
  template:
    metadata:
      labels:
        name: get-them-certs
        app: certo
    spec:
      containers:
        - name: certo-cont
          stdin: true
          tty: true
          image: docker.io/certbot/certbot
          ports:
            - containerPort: 8080
              protocol: TCP
          command:
            - "sh"
          resources:
            requests:
              memory: "60Mi"
              cpu: "200m"
            limits:
              memory: "80Mi"
              cpu: "400m"
  replicas: 1
  strategy:
    type: Recreate
