openshift/deployment-fedmsg.yml
# MIT License
#
# Copyright (c) 2018-2019 Red Hat, Inc.

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

---
kind: DeploymentConfig
apiVersion: v1
metadata:
  labels:
    app: packit
    name: packit-service-fedmsg
  name: packit-service-fedmsg
spec:
  template:
    metadata:
      labels:
        name: packit-service-fedmsg
        app: packit
    spec:
      volumes:
      - name: packit-ssh
        secret:
          secretName: packit-ssh
      - name: packit-secrets
        secret:
          secretName: packit-secrets
      - name: packit-config
        secret:
          secretName: packit-config
      containers:
        - name: packit-service-fedmsg
          image: docker.io/usercont/packit-service:master
          volumeMounts:
          - name: packit-ssh
            mountPath: /packit-ssh
          - name: packit-secrets
            mountPath: /secrets
          - name: packit-config
            mountPath: /home/packit/.config
          command:
            - "packit-service"
            - "--debug"
            - "listen-to-fedmsg"
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
  replicas: 1
  strategy:
    type: Recreate
