openshift/flower.yml
# Copyright Contributors to the Packit project.
# SPDX-License-Identifier: MIT

---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: flower
  labels:
    service: flower
spec:
  selector:
    service: flower
  template:
    metadata:
      labels:
        service: flower
        name: flower
    spec:
      containers:
        - name: flower
          image: mher/flower
          ports:
            - containerPort: 5555
          resources:
            requests:
              memory: "80Mi"
              cpu: "50m"
            limits:
              memory: "80Mi"
              cpu: "50m"
  replicas: 1
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: flower
  labels:
    service: flower
spec:
  ports:
    - name: "5555"
      port: 5555
      targetPort: 5555
  selector:
    service: flower
