openshift/postgres.yml
# Copyright Contributors to the Packit project.
# SPDX-License-Identifier: MIT
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: postgres-12
  labels:
    service: postgres-12
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    service: postgres-12
  template:
    metadata:
      labels:
        service: postgres-12
        name: postgres-12
    spec:
      containers:
        - env:
            - name: POSTGRESQL_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: postgres-secret
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: postgres-secret
            - name: POSTGRESQL_DATABASE
              valueFrom:
                secretKeyRef:
                  key: database-name
                  name: postgres-secret
          image: quay.io/centos7/postgresql-12-centos7
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - --live
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              memory: "386Mi"
              cpu: "100m"
            limits:
              memory: "386Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-12
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - name: postgres-port
      port: 5432
      targetPort: 5432
  selector:
    service: postgres-12
