openshift/redis-commander.yml
# Copyright Contributors to the Packit project.
# SPDX-License-Identifier: MIT

---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: redis-commander
  labels:
    service: redis-commander
spec:
  selector:
    service: redis-commander
  template:
    metadata:
      labels:
        service: redis-commander
        name: redis-commander
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander
          ports:
            - containerPort: 8081
          resources:
            # requests and limits have to be the same to have Guaranteed QoS
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "32Mi"
              cpu: "10m"
  replicas: 1
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  labels:
    service: redis-commander
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    service: redis-commander
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis-commander
spec:
  to:
    kind: Service
    name: redis-commander
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
